# ifcplusplus

./: .gitignore  CMakeLists.txt  README.md  openapitools.json
IfcPlusPlus/: CMakeLists.txt
IfcPlusPlus/src/ifcpp/geometry/: AppearanceData.h  GeometryException.h  GeometrySettings.h  StylesConverter.h
IfcPlusPlus/src/ifcpp/geometry/c3d/: CurveConverter.h  GeomUtils.h  GeometryConverter.h  GeometryInputData.h  PlacementConverter.h  PointConverter.h  ProfileConverter.h  RepresentationConverter.h  SolidModelConverter.h  SplineConverter.h  TessellatedItemConverter.h
api-client/: CMakeLists.txt  README.md  swagger.yaml
api-client/.openapi-generator/: FILES
api-client/include/c3dservice-api/: ApiClient.h  ApiConfiguration.h  ApiException.h  HttpContent.h  IHttpBody.h  JsonBody.h  ModelBase.h  MultipartFormData.h  Object.h
api-client/include/c3dservice-api/api/: CacheApi.h  ModelApi.h  MonitorApi.h  SessionApi.h
api-client/include/c3dservice-api/model/: AppendModelsBody.h  CacheComposeModel_request.h  CacheGeometry_request.h  CacheModel_request.h  CachedModel.h  ComposeModelNode.h  CreateWorkspace_200_response.h  GeometryLocation.h  GetSessionsList_200_response.h  Model.h  RemoveModels_request.h  Times.h  TreeNode.h  User.h  Workspace.h
api-client/src/: ApiClient.cpp  ApiConfiguration.cpp  ApiException.cpp  HttpContent.cpp  JsonBody.cpp  ModelBase.cpp  MultipartFormData.cpp  Object.cpp
api-client/src/api/: CacheApi.cpp  ModelApi.cpp  MonitorApi.cpp  SessionApi.cpp
api-client/src/model/: AppendModelsBody.cpp  CacheComposeModel_request.cpp  CacheGeometry_request.cpp  CacheModel_request.cpp  CachedModel.cpp  ComposeModelNode.cpp  CreateWorkspace_200_response.cpp  GeometryLocation.cpp  GetSessionsList_200_response.cpp  Model.cpp  RemoveModels_request.cpp  Times.cpp  TreeNode.cpp  User.cpp  Workspace.cpp
api-client/templates/: modelbase-header.mustache
examples/LoadFileWithGeometryExampleConsole/: CMakeLists.txt
examples/LoadFileWithGeometryExampleConsole/src/: main.cpp
src/: main.cpp
